Fix text-align

--- a/app/assets/stylesheets/static_pages.css.scss
+++ b/app/assets/stylesheets/static_pages.css.scss
@@ -106,3 +106,6 @@ li {
 	padding-left: 30px;
 	padding-right: 50px;
 }
+#greywrap p{
+	text-align: left;
+}
